# cv

./: .travis.yml  Dockerfile  Dockerrun.aws.json  README.md  docker-compose.yml
api/: Dockerfile  LICENSE  api.cabal  package.yaml  stack.yaml
api/app/: Main.hs
api/src/: Api.hs  Config.hs  DevelMain.hs  Init.hs  Models.hs
api/src/api/: Stats.hs
nginx/: default.conf
ui/: Dockerfile  Dockerfile.dev  bower.json  package.json  psc-package.json
ui/assets/: index.html  index.js
ui/assets/styles/: _mixins.scss  _scaffold.scss  _variables.scss  index.scss
ui/assets/styles/components/: background.scss  experience.scss  hero.scss  history.scss  nav.scss
ui/src/: Home.js  Home.purs  Utils.purs
ui/src/Components/: Background.purs  Experience.purs  Footer.purs  Hero.purs  Nav.purs  Skills.purs
ui/src/Utils/: Css.purs
