name:           api
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Hairlock/cv>
homepage:       https://github.com/Hairlock/cv
bug-reports:    https://github.com/Hairlock/cv/issues
author:         Yannick Sealy
maintainer:     yannseal1@gmail.com
copyright:      2019 Yannick Sealy
license:        MIT
build-type:     Simple
cabal-version:  >=1.18
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Hairlock/cv

library
  default-language:
      Haskell2010
  exposed-modules:
      Api
      , Api.Stats
      , Config
      , Init
      , Logger
      , Models
      , DevelMain
  other-modules:
      Paths_api
  hs-source-dirs:
      src
  build-depends:
      base >= 4.9 && <5
      , aeson
      , bytestring
      , fast-logger
      , foreign-store
      , text
      , mtl
      , monad-control
      , monad-logger
      , katip >= 0.5.0.2 && < 0.6
      , persistent
      , persistent-postgresql
      , persistent-template
      , resource-pool
      , safe
      , servant >= 0.13 && < 0.14
      , servant-server >= 0.13 && < 0.14
      , transformers
      , wai
      , wai-extra
      , warp

executable api-exe
  main-is: Main.hs
  other-modules:
      Paths_api
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.9 && <5
    , api
    , persistent-postgresql
    , wai
    , warp
    , monad-logger
    , safe
  default-language:
      Haskell2010

test-suite api-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_api
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      api
    , base
  default-language:
      Haskell2010
